fix spinner styles jumping around based on which css was loaded by copying all css into index and shift the root loader downwards to align with the header offset

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -27,7 +27,7 @@
 
 .spinner-inner {
   position: absolute;
-  border: 4px solid transparent;
+  border: 3px solid transparent;
   border-top-color: #00ff00;
   border-radius: 50%;
   width: 100%;
